--- a/src/app/home/nav/nav.component.html
+++ b/src/app/home/nav/nav.component.html
@@ -1,22 +1,12 @@
-<nav class="navbar">
-  <!-- Left: Logo -->
-  <a href="#" class="logo" (click)="$event.preventDefault()">
-    <i class="fa-brands fa-pied-piper-hat"></i>
-  </a>
-
-  <!-- Middle: Navigation Links -->
-  <ul class="nav-links">
-    <li>
-      <a href="#home" data-text="Home" [style.color]="'white'" [style.fontWeight]="'700'" (click)="scrollToSection('#home', $event)">Home</a>
-    </li>
-    <li><a href="#about" data-text="About" (click)="scrollToSection('#about', $event)">About</a></li>
-    <li><a href="#contact" data-text="Contact" (click)="scrollToSection('#contact', $event)">Contact</a></li>
-    <li><a href="#projects" data-text="Projects" (click)="scrollToSection('#projects', $event)">Projects</a></li>
-    <li><a href="#services" data-text="Services" (click)="scrollToSection('#services', $event)">Services</a></li>
-    <li><a href="#skills" data-text="skills" (click)="scrollToSection('#skills', $event)">Skills</a></li>
-
+<nav [class.dark]="isDark" class="navbar" [class.scrolled]="scrolled">
+  <a href="#" class="logo" style="text-decoration: none; font-weight: 800; font-size: 2vw;">A</a>
+  <ul [class.dark]="isDark" class="nav-links">
+    <li><a (click)="scrollTo('home')">Home</a></li>
+    <li><a (click)="scrollTo('about')">About</a></li>
+    <li><a (click)="scrollTo('services')">Services</a></li>
+    <li><a (click)="scrollTo('skills')">Skills</a></li>
+    <li><a (click)="scrollTo('projects')">Projects</a></li>
+    <li><a (click)="scrollTo('contact')">Contact</a></li>
   </ul>
-
-  <!-- Right: Resume Button -->
-  <a href="resume.pdf" class="resume-btn" download>Download Resume</a>
+  <a href="#" class="resume-btn">Download Resume</a>
 </nav>
