--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div class="projects-page" style="background-color: #111;">
-  <section class="projects" id="projects">
+  <section class="projects" id="projects" style="background-color: #111;">
   <div class="title">
     <h2 style="font-family: 'Science Gothic';">Projects</h2>
     <hr />
