--- a/src/app/home/services/services.component.html
+++ b/src/app/home/services/services.component.html
@@ -17,6 +17,7 @@
       I design and develop fast and scalable web applications
       using modern technologies. From UI design to backend APIs and deployment.
     </p>
+    <img src="https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/Portfolio%20icons%20angula%2Fwesbite%20developer.png?alt=media&token=de4d59f2-6541-405a-93a8-3ee20ddbd9d7" alt="">
     <div class="btn">
     <button>View More</button>
     </div>
@@ -28,28 +29,31 @@
       Comprehensive development solutions from concept to deployment.
       I handle every aspect of the development maintenance.
     </p>
+    <img src="https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/Portfolio%20icons%20angula%2Fend%20to%20end.png?alt=media&token=898495e0-9a85-44dd-af3b-7b3f1b71ace1" alt="">
     <div class="btn">
     <button>View More</button>
     </div>
   </div>
   <div class="card">
-    <h6>End-to-End Development</h6>
+    <h6>Backend Development</h6>
     <p>
       Comprehensive development solutions from concept to deployment.
       I handle every aspect of the development lifecycle including
       
     </p>
+    <img src="https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/Portfolio%20icons%20angula%2Fbackend.png?alt=media&token=8df9d6d0-99b9-4084-8149-47578d5ec55b" alt="">
     <div class="btn">
     <button>View More</button>
     </div>
 
 </div>
   <div class="card">
-    <h6>End-to-End Development</h6>
+    <h6>Website Conversion & Bug Fixing</h6>
     <p>
       Comprehensive development solutions from concept to deployment.
       I handle every aspect of the development lifecycle including
     </p>
+    <img src="https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/Portfolio%20icons%20angula%2Fweb%20bug.png?alt=media&token=3938f0c2-2fa5-44c1-b57a-5cbfc5f9c75c" alt="">
     <div class="btn">
     <button>View More</button>
     </div>
