Final mobile resposive

--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,20 +1,38 @@
 <section id="contact">
   <footer class="footer">
     <div class="footer-top-name">
-     <svg width="120" height="80" viewBox="0 0 24 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M0.936 11H0.78V2.6H1.188L6.18 10.364V2.6H6.336V11H5.46L0.936 4.04V11Z" fill="#111111"/>
-<path d="M16.616 2.6V2.72H12.836V6.32H16.34V6.44H12.836V10.88H16.88V11H11.84V2.6H16.616Z" fill="#111111"/>
-<path d="M6.504 11H6.36L9.948 2.6L10.08 2.54L13.104 11H12.084L11.148 8.36H7.644L6.504 11ZM9.576 3.896L7.692 8.24H11.112L9.576 3.896Z" fill="#111111"/>
-</svg>
-<hr>
+      <svg
+        width="120"
+        height="80"
+        viewBox="0 0 24 15"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M0.936 11H0.78V2.6H1.188L6.18 10.364V2.6H6.336V11H5.46L0.936 4.04V11Z"
+          fill="#111111"
+        />
+        <path
+          d="M16.616 2.6V2.72H12.836V6.32H16.34V6.44H12.836V10.88H16.88V11H11.84V2.6H16.616Z"
+          fill="#111111"
+        />
+        <path
+          d="M6.504 11H6.36L9.948 2.6L10.08 2.54L13.104 11H12.084L11.148 8.36H7.644L6.504 11ZM9.576 3.896L7.692 8.24H11.112L9.576 3.896Z"
+          fill="#111111"
+        />
+      </svg>
 
+      <strong>
+        <hr />
+      </strong>
     </div>
 
     <div class="footer-container">
-
       <div class="footer-contact">
-        <a href="mailto:neelapunani2580@gmail.com">Email : neelapunani2580&#64;gmail.com</a>
-        <a href="tel:+917661891711" style="margin-left: 20vw;">Ph No : +91&nbsp;76618&nbsp;91711</a>
+        <a href="mailto:neelapunani2580@gmail.com"
+          >Email : neelapunani2580&#64;gmail.com</a
+        >
+        <a href="tel:+917661891711">Ph No : +91&nbsp;76618&nbsp;91711</a>
         <span>Open for freelance & full-time opportunities</span>
       </div>
 
@@ -22,11 +40,8 @@
         <span>Built with intent, not trends</span>
         <span>Deployed on Render</span>
       </div>
-
     </div>
 
-    <div class="footer-bottom">
-      © 2025 Nani Neelapu — All rights reserved
-    </div>
+    <div class="footer-bottom">© 2025 Nani Neelapu — All rights reserved</div>
   </footer>
 </section>
