--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="home-title">
       <h1 class="line1">Hello,</h1>
       <h1 class="line2">I'm Nani Neelapu</h1>
-      <h6 class="line3">Web Designer | Programmer | Freelancer</h6>
+      <h6 class="line3">Web Designer |- Programmer |- Freelancer</h6>
       <div class="buttons">
         <div class="btn-title">
           <h5>CONTACT ME</h5>
