--- a/src/app/home/page/page.component.html
+++ b/src/app/home/page/page.component.html
@@ -1,5 +1,5 @@
 <section id="about">
-    <div class="section-title">
+  <div class="section-title">
     <h2>About Me</h2>
     <span>Who I Am</span>
   </div>
@@ -7,9 +7,12 @@
     <div class="left">
       <div class="left-content">
         <p>
-          B.Tech Computer Science graduate from GIET. Java Full Stack trainee at Techwing with
-          hands-on experience building web applications using Angular and Next.js, integrated with REST APIs. Worked as a freelance web developer, delivering responsive, user-focused websites and application features. 
-          Seeking an entry-level software development role to grow professionally.
+          B.Tech Computer Science graduate from GIET. Java Full Stack trainee at
+          Techwing with hands-on experience building web applications using
+          Angular and Next.js, integrated with REST APIs. Worked as a freelance
+          web developer, delivering responsive, user-focused websites and
+          application features. Seeking an entry-level software development role
+          to grow professionally.
         </p>
         <div class="t1">
           <h6>Email</h6>
@@ -19,7 +22,7 @@
           <h6>Contact</h6>
           <p>7661891711</p>
         </div>
-        
+
         <!-- <h6></h6> -->
       </div>
     </div>
