--- a/src/app/home/footer/footer.component.css
+++ b/src/app/home/footer/footer.component.css
@@ -136,28 +136,71 @@
 
 /* Responsive */
 @media (max-width: 768px) {
-    .footer-container {
-        flex-direction: column;
-        gap: 50px;
+    .footer {
+        padding: 8vw 5vw 12vw;
         text-align: center;
-        align-items: center;
-    }
-
-    .footer-contact {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 2vw;
-        flex: 1;
-        position: relative;
     }
 
     .footer-top-name {
-        margin: 0 auto 40px;
+        margin: 0 auto 8vw;
+    }
+
+    .footer-top-name h2 {
+        font-size: 7vw;
+        line-height: 1.3;
+    }
+
+    .footer-container {
+        flex-direction: column;
+        gap: 10vw;
+        padding: 5vw 0;
+    }
+
+    .footer-contact {
+        flex-direction: column;
+        gap: 5vw;
+        width: 100%;
+    }
+
+    .footer-contact a {
+        font-size: 4.5vw;
+        padding: 2vw 0;
+        width: 100%;
+        border-right: none !important;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+    .footer-contact a:last-child {
+        border-bottom: none;
     }
 
     .footer-contact a::after {
-        left: 50%;
-        transform: translateX(-50%);
+        width: 60%;
+        bottom: -1px;
+    }
+
+    .footer-contact span {
+        font-size: 3.8vw;
+        margin-top: 3vw;
+    }
+
+    .footer-meta {
+        width: 100%;
+    }
+
+    .footer-meta span {
+        font-size: 3.5vw;
+        line-height: 1.6;
+        margin-bottom: 4vw;
+    }
+
+    .footer-bottom {
+        margin-top: 8vw;
+        padding-top: 6vw;
+        font-size: 3.2vw;
+    }
+
+    .footer-bottom::before {
+        width: 60%;
     }
 }
