--- a/src/app/home/nav/nav.component.css
+++ b/src/app/home/nav/nav.component.css
@@ -40,6 +40,7 @@
     /* Vertically center the links */
     gap: 6vw;
     margin: 0;
+    cursor: pointer;
     /* Remove any default margins */
     padding: 0;
     font-weight: 700;
