--- a/src/app/home/navbar/navbar.component.css
+++ b/src/app/home/navbar/navbar.component.css
@@ -116,7 +116,7 @@
     .home {
         padding-top: 20vh;
         padding-left: 5vw;
-        background-position: 35% center;
+        background-position: center center;
     }
 
     .home-content h1 {
