--- a/src/app/home/navbar/navbar.component.css
+++ b/src/app/home/navbar/navbar.component.css
@@ -179,74 +179,55 @@ audio {
 }
 
 @media (max-width: 768px) {
-    .home-title {
-        text-align: left;
-        width: 90%;
-        margin: 0 auto 3vh;
-        padding: 0;
-        margin-bottom: 2rem;
-    }
-
-    .home-title h6 {
-        font-size: 4vw;
-        text-align: left;
-        justify-content: flex-start;
-        margin-top: 0.5rem;
-        /* Reduced from default */
-        margin-bottom: 1.5rem;
-        /* Add space below the subtitle */
-    }
-
-    .home-content h1 {
-        font-size: 6vw;
-        line-height: 1.8;
-        /* Reduced from 1.8 */
-        letter-spacing: 1em;
-        text-align: left;
-        width: 100%;
-        margin-bottom: 0;
-        /* Remove any bottom margin */
-    }
-
     .home {
-        padding-top: 5vh;
-        /* Reduced from default */
-        align-items: flex-start;
-        /* Align content to the top */
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    .background-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+        object-position: 30% center !important;
     }
 
     .home-content {
-        margin-top: 5vh;
-        /* Add some space from the top */
+        padding: 0 5vw;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     .home-title {
-        margin-top: 0;
-        padding-top: 2vh;
-        /* Reduced top padding */
-    }
-
-    /* Adjust the buttons section to be more compact */
-    .buttons {
-        margin-top: 1rem;
-        /* Reduced space above buttons */
-    }
-
-    .line2::after {
-        content: "I'm Nani";
-    }
-
-    .line2 {
-        visibility: hidden;
-        position: relative;
-    }
-
-    .line2::after {
-        visibility: visible;
-        position: absolute;
-        left: 0;
-        top: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
         width: 100%;
+        margin: 0;
+        padding: 2rem 0;
+        text-align: left;
+        margin-bottom: 65vw;
+        gap: 2vw;
+    }
+
+    .left-side {
+        width: 100%;
+        text-align: left;
+    }
+
+    .middle-gap {
+        display: none;
+    }
+
+    .right-side {
+        width: 100%;
+        align-items: flex-start;
+        text-align: left;
     }
 
     .line1,
@@ -254,26 +235,44 @@ audio {
     .line3 {
         display: block;
         width: 100%;
+        text-align: left;
+        visibility: visible;
+        position: static;
     }
 
-    .line3 {
-        margin-top: 0;
-        /* Remove top margin */
-        margin-bottom: 1rem;
-        /* Add space below */
+    .line2::after {
+        display: none;
+    }
+
+    .line2 {
+        visibility: visible;
+        position: static;
+    }
+
+    .home-content h1 {
+        font-size: 8vw;
+        line-height: 1.2;
+        letter-spacing: 0.1em;
+        text-align: left;
+        width: 100%;
+        margin-bottom: 0.5rem;
+    }
+
+    .home-title h6 {
+        font-size: 4vw;
+        text-align: left;
+        justify-content: flex-start;
+        margin: 0.5rem 0;
+        padding: 0;
     }
 
     .buttons {
         display: flex;
-        /* don’t assume, declare it */
         flex-direction: column;
         align-items: flex-start;
-        /* 👈 START (left) */
-        justify-content: flex-start;
-        /* 👈 START (top) */
-        position: relative;
-        margin-left: 0;
-        gap: 4vw;
+        gap: 30vw;
+        margin: 1rem 0 0 0;
+        width: 100%;
     }
 
     .btn-title h5 {
@@ -281,12 +280,10 @@ audio {
     }
 
     .i1 i {
-        font-size: 4vw;
-        transition:
-            transform 0.25s ease,
-            color 0.25s ease,
-            filter 0.25s ease;
-        will-change: transform;
+        font-size: 5vw;
     }
 
+    .icons {
+        gap: 2rem;
+    }
 }
